// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types with schemas 1`] = `
[
  "35:0",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 2`] = `
[
  "36:0",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 3`] = `
[
  "37:37",
  "Property 'c2' does not exist on type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", false>'.",
]
`;

exports[`Types with schemas 4`] = `
[
  "38:29",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 5`] = `
[
  "39:29",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 6`] = `
[
  "42:40",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 7`] = `
[
  "45:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 8`] = `
[
  "51:0",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 9`] = `
[
  "52:0",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 10`] = `
[
  "53:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 11`] = `
[
  "56:27",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 12`] = `
[
  "59:39",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | undefined'.",
]
`;

exports[`Types with schemas 13`] = `
[
  "60:33",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 14`] = `
[
  "63:24",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 15`] = `
[
  "69:0",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 16`] = `
[
  "70:0",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 17`] = `
[
  "71:24",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 18`] = `
[
  "74:49",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 19`] = `
[
  "75:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 20`] = `
[
  "78:37",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 21`] = `
[
  "79:25",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 22`] = `
[
  "84:0",
  "Conversion of type 'CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number>' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 23`] = `
[
  "85:37",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 24`] = `
[
  "86:25",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 25`] = `
[
  "92:0",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 26`] = `
[
  "93:0",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 27`] = `
[
  "94:29",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 28`] = `
[
  "97:40",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 29`] = `
[
  "100:26",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 30`] = `
[
  "105:0",
  "Conversion of type 'DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 31`] = `
[
  "106:0",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 32`] = `
[
  "107:26",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 33`] = `
[
  "112:38",
  "Type '{ c2: number; }' is not assignable to type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 34`] = `
[
  "113:38",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 35`] = `
[
  "114:28",
  "Argument of type '{ t2: { r2: { c2: number; }; }; }' is not assignable to parameter of type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, true>'.",
]
`;

exports[`Types with schemas 36`] = `
[
  "117:38",
  "Type '{ c2: number; }' is not assignable to type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 37`] = `
[
  "118:38",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 38`] = `
[
  "119:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 39`] = `
[
  "122:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 40`] = `
[
  "125:37",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 41`] = `
[
  "126:37",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 42`] = `
[
  "127:24",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 43`] = `
[
  "130:31",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 44`] = `
[
  "131:31",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 45`] = `
[
  "132:24",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 46`] = `
[
  "135:44",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'RowFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 47`] = `
[
  "136:44",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 48`] = `
[
  "137:31",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 49`] = `
[
  "140:24",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 50`] = `
[
  "144:37",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 51`] = `
[
  "145:43",
  "Argument of type 'string' is not assignable to parameter of type 'number | ((cell: number | undefined) => number)'.",
]
`;

exports[`Types with schemas 52`] = `
[
  "146:43",
  "Argument of type '() => string' is not assignable to parameter of type 'number | ((cell: number | undefined) => number)'.",
]
`;

exports[`Types with schemas 53`] = `
[
  "147:25",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 54`] = `
[
  "150:37",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 55`] = `
[
  "151:25",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 56`] = `
[
  "154:28",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 57`] = `
[
  "155:28",
  "Argument of type '{ v2: number; }' is not assignable to parameter of type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, true>'.",
]
`;

exports[`Types with schemas 58`] = `
[
  "158:35",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 59`] = `
[
  "159:35",
  "Argument of type '{ v2: number; }' is not assignable to parameter of type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, true>'.",
]
`;

exports[`Types with schemas 60`] = `
[
  "163:32",
  "Argument of type 'string' is not assignable to parameter of type 'number | ((value: number | undefined) => number)'.",
]
`;

exports[`Types with schemas 61`] = `
[
  "164:32",
  "Argument of type '() => string' is not assignable to parameter of type 'number | ((value: number | undefined) => number)'.",
]
`;

exports[`Types with schemas 62`] = `
[
  "165:26",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 63`] = `
[
  "168:26",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 64`] = `
[
  "174:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 65`] = `
[
  "181:10",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 66`] = `
[
  "182:10",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 67`] = `
[
  "186:10",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 68`] = `
[
  "187:10",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 69`] = `
[
  "189:8",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 70`] = `
[
  "194:8",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 71`] = `
[
  "206:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 72`] = `
[
  "215:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 73`] = `
[
  "216:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 74`] = `
[
  "220:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 75`] = `
[
  "221:6",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 76`] = `
[
  "223:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 77`] = `
[
  "228:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 78`] = `
[
  "237:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 79`] = `
[
  "238:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 80`] = `
[
  "240:4",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 81`] = `
[
  "244:4",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 82`] = `
[
  "252:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 83`] = `
[
  "257:4",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 84`] = `
[
  "258:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 85`] = `
[
  "262:4",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 86`] = `
[
  "263:4",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 87`] = `
[
  "265:2",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 88`] = `
[
  "270:2",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 89`] = `
[
  "275:4",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 90`] = `
[
  "276:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 91`] = `
[
  "278:2",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 92`] = `
[
  "283:2",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 93`] = `
[
  "286:29",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 94`] = `
[
  "291:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 95`] = `
[
  "292:4",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 96`] = `
[
  "296:4",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 97`] = `
[
  "297:4",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 98`] = `
[
  "299:2",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 99`] = `
[
  "303:2",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 100`] = `
[
  "309:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 101`] = `
[
  "310:4",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 102`] = `
[
  "312:2",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 103`] = `
[
  "316:2",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 104`] = `
[
  "329:4",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number>, CellOrUndefined<...>] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 105`] = `
[
  "330:4",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1d", string>, CellOrUndefined<...>] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 106`] = `
[
  "336:4",
  "Conversion of type '[string, string] | undefined' to type '[string, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 107`] = `
[
  "337:4",
  "Conversion of type '[string, string] | undefined' to type '[undefined, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 108`] = `
[
  "338:4",
  "Conversion of type '[string, string] | undefined' to type '[undefined, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 109`] = `
[
  "339:4",
  "Conversion of type '[DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">, DefaultedValueFromSchema<{ readonly v1: { ...; }; readonly v1d: { ...; }; }, "v1">] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 110`] = `
[
  "340:4",
  "Conversion of type '[string, string] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 111`] = `
[
  "356:6",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number>, CellOrUndefined<...>] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 112`] = `
[
  "357:6",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1d", string>, CellOrUndefined<...>] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 113`] = `
[
  "363:6",
  "Conversion of type '[string, string] | undefined' to type '[string, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 114`] = `
[
  "364:6",
  "Conversion of type '[string, string] | undefined' to type '[undefined, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 115`] = `
[
  "365:6",
  "Conversion of type '[string, string] | undefined' to type '[undefined, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 116`] = `
[
  "366:6",
  "Conversion of type '[DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">, DefaultedValueFromSchema<{ readonly v1: { ...; }; readonly v1d: { ...; }; }, "v1">] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 117`] = `
[
  "367:6",
  "Conversion of type '[string, string] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 118`] = `
[
  "377:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 119`] = `
[
  "378:2",
  "Conversion of type 'CellChange<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number | undefined> | undefined' to type '[true, number, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 120`] = `
[
  "379:2",
  "Conversion of type 'CellChange<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number | undefined> | undefined' to type '[true, string, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 121`] = `
[
  "383:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 122`] = `
[
  "389:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 123`] = `
[
  "397:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 124`] = `
[
  "398:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 125`] = `
[
  "399:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 126`] = `
[
  "405:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 127`] = `
[
  "406:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 128`] = `
[
  "410:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 129`] = `
[
  "412:34",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 130`] = `
[
  "417:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 131`] = `
[
  "418:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 132`] = `
[
  "419:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 133`] = `
[
  "425:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 134`] = `
[
  "426:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 135`] = `
[
  "430:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 136`] = `
[
  "433:35",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 137`] = `
[
  "444:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 138`] = `
[
  "445:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 139`] = `
[
  "446:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 140`] = `
[
  "451:2",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | undefined'.",
]
`;

exports[`Types with schemas 141`] = `
[
  "458:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 142`] = `
[
  "459:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 143`] = `
[
  "460:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 144`] = `
[
  "465:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 145`] = `
[
  "469:2",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 146`] = `
[
  "485:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 147`] = `
[
  "486:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 148`] = `
[
  "487:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 149`] = `
[
  "488:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 150`] = `
[
  "496:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 151`] = `
[
  "497:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 152`] = `
[
  "498:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 153`] = `
[
  "505:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 154`] = `
[
  "506:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 155`] = `
[
  "507:2",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 156`] = `
[
  "515:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 157`] = `
[
  "516:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 158`] = `
[
  "521:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 159`] = `
[
  "525:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 160`] = `
[
  "527:32",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 161`] = `
[
  "533:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 162`] = `
[
  "534:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 163`] = `
[
  "535:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 164`] = `
[
  "536:2",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 165`] = `
[
  "543:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 166`] = `
[
  "544:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 167`] = `
[
  "545:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 168`] = `
[
  "552:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 169`] = `
[
  "553:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 170`] = `
[
  "554:2",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 171`] = `
[
  "562:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 172`] = `
[
  "563:2",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 173`] = `
[
  "568:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 174`] = `
[
  "569:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 175`] = `
[
  "570:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 176`] = `
[
  "574:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 177`] = `
[
  "577:36",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 178`] = `
[
  "590:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 179`] = `
[
  "591:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 180`] = `
[
  "592:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 181`] = `
[
  "593:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 182`] = `
[
  "594:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 183`] = `
[
  "595:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 184`] = `
[
  "596:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 185`] = `
[
  "597:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 186`] = `
[
  "617:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 187`] = `
[
  "618:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 188`] = `
[
  "623:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 189`] = `
[
  "624:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 190`] = `
[
  "626:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 191`] = `
[
  "627:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 192`] = `
[
  "628:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 193`] = `
[
  "629:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 194`] = `
[
  "630:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 195`] = `
[
  "643:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 196`] = `
[
  "644:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 197`] = `
[
  "645:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 198`] = `
[
  "646:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 199`] = `
[
  "647:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 200`] = `
[
  "661:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 201`] = `
[
  "662:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 202`] = `
[
  "663:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 203`] = `
[
  "664:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 204`] = `
[
  "676:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 205`] = `
[
  "677:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 206`] = `
[
  "678:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 207`] = `
[
  "679:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 208`] = `
[
  "680:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 209`] = `
[
  "681:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 210`] = `
[
  "682:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 211`] = `
[
  "708:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 212`] = `
[
  "713:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 213`] = `
[
  "714:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 214`] = `
[
  "719:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 215`] = `
[
  "720:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 216`] = `
[
  "725:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 217`] = `
[
  "726:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 218`] = `
[
  "728:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 219`] = `
[
  "729:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 220`] = `
[
  "730:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 221`] = `
[
  "731:4",
  "This comparison appears to be unintentional because the types '"c0" | "c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 222`] = `
[
  "744:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 223`] = `
[
  "745:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 224`] = `
[
  "746:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 225`] = `
[
  "747:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 226`] = `
[
  "748:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 227`] = `
[
  "749:4",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 228`] = `
[
  "768:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 229`] = `
[
  "770:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 230`] = `
[
  "771:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 231`] = `
[
  "772:4",
  "This comparison appears to be unintentional because the types '"c0" | "c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 232`] = `
[
  "783:22",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 233`] = `
[
  "784:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 234`] = `
[
  "785:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 235`] = `
[
  "786:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 236`] = `
[
  "792:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 237`] = `
[
  "793:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 238`] = `
[
  "794:2",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 239`] = `
[
  "798:20",
  "Property 't2' does not exist on type 'TablesFromSchema<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }>'.",
]
`;

exports[`Types with schemas 240`] = `
[
  "801:45",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | null'.",
]
`;

exports[`Types with schemas 241`] = `
[
  "802:45",
  "Argument of type '"c2"' is not assignable to parameter of type '"c0" | "c1" | "c1d" | null'.",
]
`;

exports[`Types with schemas 242`] = `
[
  "803:33",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 243`] = `
[
  "808:20",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 244`] = `
[
  "809:2",
  "Conversion of type 'ValueChange<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1", number | undefined> | undefined' to type '[true, number, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 245`] = `
[
  "810:2",
  "Conversion of type 'ValueChange<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1", number | undefined> | undefined' to type '[true, string, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 246`] = `
[
  "814:20",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 247`] = `
[
  "820:20",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 248`] = `
[
  "831:22",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 249`] = `
[
  "832:4",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 250`] = `
[
  "833:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 251`] = `
[
  "834:4",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 252`] = `
[
  "850:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 253`] = `
[
  "851:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 254`] = `
[
  "856:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 255`] = `
[
  "857:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 256`] = `
[
  "859:22",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 257`] = `
[
  "860:4",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 258`] = `
[
  "865:20",
  "Property 'v2' does not exist on type 'ValuesFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }>'.",
]
`;

exports[`Types with schemas 259`] = `
[
  "867:34",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d" | null'.",
]
`;
